--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: my property insights
+title: mypropertyinsights
 timezone: GMT
 collections:
   posts:
@@ -12,5 +12,6 @@ defaults:
 email: naamanh10@gmail.com
 description: My Property Insights
 baseurl: ''
-url: 
+url:
 markdown: kramdown
+date: 2018
