new area explorer new area explorer

--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,4 @@ baseurl: ''
 url: https://www.mypropertyinsights.co.uk
 markdown: kramdown
 date: 2018
+keywords: [property,insights,value,selling,buying,house,home,owner,mortgage,advice]
